test/error/scan/UnclosedComment.mod
MODULE UnclosedComment;

(* comment without end

END UnclosedComment.
